--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     color: #ffffff;
     font-size: 24px;
     line-height: 28px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 a {
