--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 24px;
     line-height: 28px;
     font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
 }
 
 a {
@@ -19,6 +20,40 @@ a {
     max-width: 1230px;
     padding: 0 15px;
     margin: 0 auto;
+}
+
+.header {
+    height: 100vh;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    padding-top: 36px;
+    margin-bottom: 29px;
+}
+
+.header-btn {
+    width: 60px;
+    height: 60px;
+    border: 1px solid #ffffff;
+    margin-top: 31px;
+    background: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-btn div {
+    width: 36px;
+    height: 2px;
+    background-color: #ffffff;
+    margin: 5px 0;
 }
 
 .header-content__title {
