--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     background-color: #0b0b0b;
     color: #ffffff;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 30px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
 }
@@ -24,6 +24,10 @@ a {
 
 .header {
     height: 100vh;
+    position: absolute;
+    z-index: 5;
+    background: rgba(0, 0, 0, 0.3);
+    width: 100%;
 }
 
 .header-top {
@@ -33,7 +37,7 @@ a {
 
 .logo {
     padding-top: 36px;
-    margin-bottom: 29px;
+    margin-bottom: 50px;
 }
 
 .header-btn {
@@ -60,7 +64,7 @@ a {
     font-family: 'Roboto', sans-serif;
     font-size: 96px;
     line-height: 112px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .header-content__text {
@@ -79,6 +83,13 @@ a {
 
 .action-btn:hover {
     background: #770302;
+}
+
+.slider__item {
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
