--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,12 @@
 
 body {
     background-color: #0b0b0b;
-    color: #ffffff;
+    color: #ddd;
     font-size: 24px;
     line-height: 30px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
+    text-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2), 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 a {
@@ -26,7 +27,7 @@ a {
     height: 100vh;
     position: absolute;
     z-index: 5;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     width: 100%;
 }
 
@@ -44,8 +45,10 @@ a {
     width: 60px;
     height: 60px;
     border: 1px solid #ffffff;
+    border-radius: 5px;
     margin-top: 31px;
     background: rgba(255, 255, 255, 0.1);
+    box-shadow: -10px -10px 10px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5);
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -60,29 +63,37 @@ a {
     margin: 5px 0;
 }
 
+.header-btn:hover {
+    border: 2px solid #a3032e;
+    background: rgba(255, 0, 0, 0.1);
+}
+
 .header-content__title {
     font-family: 'Roboto', sans-serif;
-    font-size: 96px;
+    font-size: 100px;
     line-height: 112px;
+    text-shadow: -5px -5px 10px rgba(255, 255, 255, 0.2), 8px 8px 12px rgba(0, 0, 0, 0.5);
     margin-bottom: 30px;
 }
 
 .header-content__text {
-    width: 284px;
+    width: 360px;
     margin-bottom: 25px;
 }
 
 .action-btn {
     display: inline-block;
     padding: 30px 62px;
-    background: rgba(255, 255, 255, 0.15);
-    border: 1px solid #ffffff;
+    background: #a3032e;
+    border-radius: 15px;
+    box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(0, 0, 0, 0.7), inset 5px 5px 5px rgba(255, 255, 255, 0.3);
     color: #ffffff;
     cursor: pointer;
 }
 
 .action-btn:hover {
-    background: #770302;
+    background: #a3032e;
+    box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(255, 255, 255, 0.2), inset 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .slider__item {
@@ -151,6 +162,7 @@ a {
 
 .statistics-item__descr {
     color: #b70021;
+    text-shadow: none;
 }
 
 .statistics-item__num--plus span {
@@ -185,6 +197,7 @@ a {
 .advantages-descr__title {
     line-height: 42px;
     color: #b70021;
+    text-shadow: none;
     font-size: 36px;
     position: absolute;
     top: 0;
@@ -208,6 +221,17 @@ a {
     margin-bottom: 100px;
 }
 
+.advantages__images img {
+    border-radius: 5px;
+    box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.15), 15px 15px 15px rgba(0, 0, 0, 0.5);
+}
+
+.design__images img {
+    border: 15px solid #cccccc;
+    box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(0, 0, 0, 0.7), inset 5px 5px 5px rgba(255, 255, 255, 0.3);
+    border-radius: 15px;
+}
+
 .design-row {
     display: flex;
     justify-content: space-between;
@@ -225,6 +249,7 @@ a {
 .design-row__item-num {
     font-size: 24px;
     color: #b70021;
+    text-shadow: none;
 }
 
 .design-row__item-text {
@@ -235,7 +260,7 @@ a {
 .footer {
     padding: 84px 0 20px;
     text-align: center;
-    background-color: #690102;
+    background: linear-gradient(120deg, #a3032e, #690102);
 }
 
 .footer-btn__container {
