--- a/css/style.css
+++ b/css/style.css
@@ -77,14 +77,15 @@ a {
 }
 
 .header-content__text {
-    width: 360px;
+    width: 365px;
     margin-bottom: 25px;
+    text-overflow: clip;
 }
 
 .action-btn {
     display: inline-block;
     padding: 30px 62px;
-    background: #a3032e;
+    background: rgba(183, 0, 33, 0.5);
     border-radius: 15px;
     box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(0, 0, 0, 0.7), inset 5px 5px 5px rgba(255, 255, 255, 0.3);
     color: #ffffff;
@@ -93,12 +94,78 @@ a {
 }
 
 .action-btn:hover {
-    background: #a3032e;
-    /*box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(255, 255, 255, 0.2), inset 5px 5px 5px rgba(0, 0, 0, 0.5);
-    */
+    background: rgba(183, 0, 33, 0.5);
     box-shadow: -8px -8px 8px rgba(255, 255, 255, 0.2), 15px 15px 15px rgba(0, 0, 0, 0.5), inset -5px -5px 5px rgba(0, 0, 0, 0.7), inset 5px 5px 5px rgba(255, 255, 255, 0.3);
     transform: scale(0.95);
     transition: all 0.5s;
+}
+
+.menu {
+    background-color: #0b0b0b;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+}
+
+.menu-container {
+    position: relative;
+}
+
+.close-btn {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 31px;
+    right: 0;
+    cursor: pointer;
+}
+
+.close-btn::after,
+.close-btn::before {
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    transform-origin: left;
+}
+
+.close-btn::after {
+    transform: rotate(45deg);
+}
+
+.close-btn::before {
+    transform: rotate(-45deg);
+    bottom: -1px;
+}
+
+.menu__list {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.menu__list ul {
+    list-style: none;
+}
+
+.menu__list a {
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 700;
+    padding: 30px 25px 14px 0;
+    border-bottom: 3px solid #b70021;
+    display: inline-block;
+    min-width: 368px;
+    width: 100%;
+    transition: all 0.5s;
+}
+
+.menu__list a:hover {
+    border-bottom: 3px solid #ffffff;
+    transform: scale(1.2);
+    margin-left: 37px;
 }
 
 .slider__item {
