--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,6 @@ a {
 ul.footer-items {
     list-style: none;
     margin-bottom: 30px;
-    font-weight: bold;
 }
 
 .footer-items li {
@@ -357,4 +356,137 @@ ul.footer-items {
     content: "|";
     position: absolute;
     left: -5px;
+}
+
+@media (max-width: 1220px) {
+    .advantages-descr__text {
+        padding-left: 20px;
+    }
+    .design__images img {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1020px) {
+    .action-btn {
+        padding: 22px 55px;
+    }
+    .design-row {
+        display: block;
+    }
+    .design-row__item {
+        max-width: 100%;
+    }
+    .design-row__item-text {
+        max-width: 100%;
+    }
+    .design__images,
+    .design-row {
+        margin-bottom: 50px;
+    }
+    .design-row__item {
+        padding-right: 0;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 930px) {
+    .advantages__row {
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+    .advantages__row--mobile .advantages-descr {
+        order: -1;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .advantages-descr {
+        text-align: center;
+    }
+    .advantages-descr__title {
+        position: static;
+    }
+    .advantages-descr__text {
+        padding-left: 0;
+        margin: 25px auto;
+    }
+}
+
+@media (max-width: 820px) {
+    .header-content__title {
+        font-size: 90px;
+        line-height: 102px;
+        margin-bottom: 25px;
+    }
+    .statistics-items {
+        flex-wrap: wrap;
+    }
+    .statistics-item {
+        padding: 50px;
+    }
+    .design__images img {
+        border: 10px solid #cccccc;
+    }
+}
+
+@media (max-width: 650px) {
+    .statistics-item__num {
+        font-size: 76px;
+        line-height: 92px;
+    }
+    .advantages__images img {
+        width: 100%;
+    }
+    .design__images img {
+        border: 5px solid #cccccc;
+    }
+}
+
+@media (max-width: 450px) {
+    .header-content__title {
+        font-size: 80px;
+        margin-top: 20px;
+        line-height: 90px;
+    }
+}
+
+@media (max-width: 420px) {
+    body {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    .logo img {
+        width: 200px;
+    }
+    .header-content__title {
+        font-size: 70px;
+        margin-top: 20px;
+        line-height: 85px;
+    }
+    .header-content__text {
+        width: 300px;
+    }
+    .menu__list ul {
+        width: 100%;
+    }
+    .menu__list a {
+        font-size: 30px;
+        line-height: 44px;
+        padding: 19px 10px 7px 0;
+        display: block;
+        min-width: 100%;
+    }
+    .action-btn {
+        padding: 20px 45px;
+    }
+    .statistics {
+        margin: 110px 0 50px;
+    }
+    .video {
+        margin-bottom: 50px;
+    }
+    .advantages-descr__text {
+        width: 100%;
+    }
 }
