--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,8 @@ a {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 31px;
-    right: 0;
+    top: 30px;
+    right: 15px;
     cursor: pointer;
 }
 
@@ -467,15 +467,15 @@ ul.footer-items {
     .header-content__text {
         width: 300px;
     }
-    .menu__list ul {
-        width: 100%;
-    }
     .menu__list a {
         font-size: 30px;
         line-height: 44px;
         padding: 19px 10px 7px 0;
         display: block;
         min-width: 100%;
+    }
+    .menu__list ul {
+        width: 100%;
     }
     .action-btn {
         padding: 20px 45px;
