--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,15 @@ a {
 }
 
 .video {
+    position: relative;
     margin-bottom: 100px;
+}
+.video iframe {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .advantages__row {
